# mvhs-master-schedule

./: .dockerignore  .firebaserc  .gitignore  Dockerfile  README.md  classList.csv  docker-compose.yml  firebase.json  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yaml  docker.yaml  lint.yaml  test.yaml
flask/: Dockerfile  README.md  app.py  conflict_calc.py  conflict_matrix.txt  pyproject.toml  requirements.txt  schedule_generator.py  schedule_generator_test.py  scripts.py  server.py
flask/conflict/: conflict_calc.py  conflict_calc_test.py  grade_level_classes.csv  schedule_generator.py  schedule_generator_test.py
flask/server/: parsing.py  response.py
master-schedule/: package.json
public/: index.html
src/: App.css  App.js  App.jsx  App.module.css  App.tsx  api.ts  app.html  index.css  index.js  index.tsx
src/ActionButton/: ActionButton.tsx
src/Modal/: Modal.tsx
src/Schedule/: Schedule.tsx  index.tsx
src/SchedulePeriod/: SchedulePeriod.jsx  SchedulePeriod.module.css  SchedulePeriod.tsx  index.jsx  index.tsx
src/lib/: CSVparser.ts  Schedule.ts
src/routes/: +page.svelte  Dropdown.svelte  Grid.svelte  ScheduleCreator.svelte
src/routes/api/parser/: +server.js
