[tool.poetry]
name = "master-schedule-backend"
version = "0.1.0"
description = ""
authors = []
packages = [{include = "conflict"}]
package-mode = false

[tool.poetry.scripts]
gbuild = "scripts:gcloud_build"
gdeploy = "scripts:gcloud_deploy"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
flask = "^3.0.3"
pandas = "^2.2.2"
pandas-stubs = "^2.2.1.240316"

[tool.poetry.group.dev.dependencies]
yapf = "^0.40.2"
mypy = "^1.10.0"
